# ratebuddy

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
grafana/dashboards/: ratebuddy.json
grafana/provisioning/dashboards/: ratebuddy.yml
prometheus/: prometheus.yml
src/ratebuddy/: __init__.py  algorithms.py  app.py  config.py  metrics.py
tests/: conftest.py  test_algorithms.py  test_api.py  test_auth.py
