[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ratebuddy"
version = "0.1.0"
description = "Production-grade rate-limiting microservice — token bucket and sliding-window algorithms backed by Redis, with Prometheus metrics and a ready-to-import Grafana dashboard."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Tristan Garcia", email = "tjgarcia0427@gmail.com" }]
requires-python = ">=3.11"
keywords = ["rate-limiting", "fastapi", "redis", "prometheus", "microservice"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "redis>=5.0",
    "prometheus-client>=0.20",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "fakeredis>=2.24",
    "ruff>=0.6",
]

[project.urls]
Homepage = "https://github.com/tjgarcia0427/ratebuddy"
Issues = "https://github.com/tjgarcia0427/ratebuddy/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ratebuddy"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
asyncio_mode = "auto"
